[APAAS-987] fix issue chat widget message duplication [APAAS-986] fix ppt button overlap [APAAS-982] fix tooltip offset

--- a/packages/agora-scenario-ui-kit/src/styles/scenario.css
+++ b/packages/agora-scenario-ui-kit/src/styles/scenario.css
@@ -465,3 +465,16 @@
 .mid-class-container .page-loading {
   left: 0;
 }
+.marque-video-container .video-player .bottom-left-info {
+  left: -6px;
+  bottom: -2px;
+}
+
+#window-manager-collector .telebox-collector {
+  position: static;
+  @apply mr-1;
+}
+
+#window-manager-collector .telebox-collector-icon {
+  margin: 0 auto;
+}
